--- a/android/client-android/app/src/main/res/values/strings.xml
+++ b/android/client-android/app/src/main/res/values/strings.xml
@@ -24,6 +24,18 @@
     <string name="confirm_code">Confirmar codigo</string>
     <string name="new_password">Nueva Contraseña</string>
     <string name="repeat_new_password">Repetir nueva contraseña</string>
+    <string name="actual_balance">Balance actual</string>
+    <string name="last_balance">Último balance</string>
+    <string name="profits">Ganancias</string>
+    <string name="losses">Pérdidas</string>
+    <string name="predictions">predicciones</string>
+    <string name="verify_balance">Balances pasados</string>
+    <string name="Profle_settings">Perfil</string>
+    <string name="edit_profile">Editar perfil</string>
+    <string name="close_session">Cerrar sesión</string>
+    <string name="profile_credentials">Cédula</string>
+    <string name="profile_names">Nombres</string>
+    <string name="profile_lastnames">Apellidos</string>
 
     <string-array name="apartments">
         <item>Tecnología</item>
